fix: some H1 titles were too large on mobile

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -78,7 +78,7 @@ video {
   }
 
   h1 {
-    font-size: 3em;
+    font-size: 2em;
     margin: 0 auto;
     text-align: center;
     letter-spacing: 0.15em;
@@ -86,16 +86,20 @@ video {
     line-height: 1.2em;
   }
 
+  @media screen and (min-width: 500px) {
+    h1 { font-size: 2.5em }
+  }
+
   @media screen and (min-width: 600px) {
-    h1 {
-      font-size: 4em
-    }
+    h1 { font-size: 3em }
+  }
+
+  @media screen and (min-width: 600px) {
+    h1 { font-size: 4em }
   }
 
   @media screen and (min-width: 800px) {
-    h1 {
-      font-size: 5em
-    }
+    h1 { font-size: 5em }
   }
 
   h2 {
